package politicas;
public interface PoliticaDescuento {
    double aplicarDescuento(double montoBase);
}
